--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_script:
   - printf "ip =127.0.0.1/32\nmechanism = db" > run.properties
   - ./setup install
   - cd $TRAVIS_BUILD_DIR
-  - mysql -u root --password=password -e "INSERT INTO PASSWD (username, password) VALUES ('notroot', 'password'), ('piOne', 'piOne'), ('piTwo', 'piTwo'), ('guest', 'guess');"
+  - mysql --user=root --password=password --execute="INSERT INTO PASSWD (username, password) VALUES ('notroot', 'password'), ('piOne', 'piOne'), ('piTwo', 'piTwo'), ('guest', 'guess');" icat
   
 
 script:
